Wait for XDG_DATA_HOME environment variable

https://bugzilla.gnome.org/show_bug.cgi?id=686934